--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.19)
-project(untitled C)
+project(microshell C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(untitled shell.c shell.h util.c util.h)
+add_executable(microshell src/shell.c src/process.c src/job.c)
