Added more functionalities: pwd, clear, coloring, [WIP] cp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(microshell C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(microshell src/shell.c src/process.c src/job.c)
+add_executable(microshell src/shell/shell.c src/process/process.c src/job/job.c shell_exec.c src/shell/shell_functions.c)
