--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
-cmake_minimum_required(VERSION 3.16)
-project(microshell C)
+cmake_minimum_required(VERSION 3.18)
+project(microshell)
 
 set(CMAKE_C_STANDARD 99)
+include_directories(src)
 
-add_executable(microshell src/shell/shell.c src/process/process.c src/job/job.c src/shell_exec.c src/shell/shell_functions.c)
+add_subdirectory(src)
+add_subdirectory(test)
+add_subdirectory(lib/googletest)
