--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required(VERSION 3.18)
 project(microshell)
 
-set(CMAKE_C_STANDARD 99)
+set(CMAKE_CXX_STANDARD 11)
 include_directories(src)
+
+enable_testing()
 
 add_subdirectory(src)
 add_subdirectory(test)
